SQL generation now excludes classes outside the specific module (Bumped to 0.57)